increaded typed font size, fixed responsive issue where icons where out of place

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,8 @@ header h1 {
 }
 
 .i-am-a {
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
+  margin-top: 20%;
 }
 
 .i-am-a h3 {
@@ -117,12 +118,16 @@ nav li {
   font-size: 17px;
 }
 
+#intro .contact-icons {
+  margin-top: 30%;
+}
+
 .contact-icons {
   /* position: absolute;
   bottom: 20%; */
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  /* align-items: flex-end; */
 }
 
 .contact-icons a {
@@ -131,7 +136,7 @@ nav li {
 
 .contact-icon {
   color: var(--my-white);
-  text-align: center;
+  /* text-align: center; */
   transition: 0.5s;
 }
 
@@ -253,6 +258,11 @@ h2 {
   color: var(--my-gray-3);
 }
 
+.contact-icons .bullet {
+  display: flex;
+  align-items: center;
+}
+
 .project-description p {
   color: var(--my-gray-3);
 }
@@ -271,8 +281,12 @@ h2 {
     margin-top: 25%;
   }
 
+  #i-am-a-list {
+    font-size: 40px;
+  }
+
   #intro .contact-icons {
-    margin-top: 50%;
+    /* margin-top: 50%; */
     /* display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -286,12 +300,13 @@ h2 {
     margin-left: 15px;
   }
 
-}
+  #contact-me h2 {
+    color: var(--my-white);
+    margin-bottom: 50px;
+  }
 
-@media only screen and (min-height: 600px) {
-
-  #intro {
-    /* height: 100vh; */
+  #contact-me .contact-icons {
+    margin-bottom: 50px;
   }
 
 }
